# kyouth-project

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/data/: data.db
backend/dataProcess/: processCSV.py
backend/src/: main.py
backend/src/dataProcess/: enrichCSV.py  filterProperty.py  rankProperty.py
backend/src/week_2/: prompt_model.py
backend/week_2/: prompt_model.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: main.py
frontend/src/html/: home.html  result.html
