[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "python-multipart>=0.0.30",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
